[project]
name = "AudioAnalysisTools"
version = "0.1.0"
description = "A Python toolkit for audio signal processing and analysis"
authors = [{name = "Max Caulfield"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coqui-tts>=0.24.3",
    "dotenv>=0.9.9",
    "huggingface-hub>=0.30.2",
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "numpy==1.26.4",
    "openai-whisper>=20240930",
    "pydub>=0.25.1",
    "pypinyin>=0.54.0",
    "pyqt6>=6.9.0",
    "python-speech-features>=0.6",
    "speechbrain>=1.0.3"
]
